[tool.poetry]
name = "lottery"
version = "0.2.0"
description = ""
authors = ["Pix-00 <15878537+Pix-00@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
